# Blonde-Blip

./: .env.example  .gitignore  80_PERCENT_COMPLETE.md  =0.44.0  ARCHITECTURE_GUIDE.md  BACKEND_GUIDE.md  BLONDE_COMMAND_UPDATE.md  CHANGELOG.md  CLEANUP_COMPLETE.md  DASHBOARD_UPDATE_COMPLETE.md  DEPLOYMENT_GUIDE.md  FEATURES.md  FINAL_INTEGRATION_COMPLETE.md  FINAL_INTEGRATION_SUMMARY.md  FINAL_SUMMARY.md  FINAL_SUMMARY.txt  FLOW_FIX_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ACTION_PLAN.md  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  INTEGRATION_GUIDE_V2.md  INTEGRATION_PROGRESS.md  INTEGRATION_STATUS.md  INTEGRATION_STATUS_SUMMARY.md  LICENSE  MODERN_TUI_FILES.md  MODERN_TUI_QUICKSTART.md  MODERN_TUI_README.md  MODERN_TUI_SUMMARY.md  PLATFORM_TESTING.md  PRIVACY.md  PROVIDER_TEAM.md  README.md  README_NEW.md  README_V2.md  SESSION_SUMMARY.md  SIMPLIFICATION_PROGRESS.md  (+22 more)
.github/workflows/: publish-to-pypi.yml  test-package.yml
development/tui/: blip_panel.py  context_panel.py  dashboard_opencode.py  mcp_auto_setup.py  settings_panel.py  work_panel.py
models/: local.py  local_backup.py  openrouter.py
tui/: __init__.py  __main__.py  agent_thinking_panel.py  agent_visualization.py  agentic_tools.py  blip.py  blip_characters.py  blip_manager.py  blip_panel.py  chat_commands.py  chat_view.py  cli.py  cli.py_fixed.py  cli_simplified.py  cli_working.py  code_analysis.py  code_review.py  config_migration.py  context_panel.py  context_panel_old.py  context_tracker.py  cost_tracker.py  dashboard.py  dashboard_old_backup.py  dashboard_opencode.py  dev_team.py  diff_panel.py  editor_view.py  enhanced_chat.py  enhanced_settings.py  file_editor.py  main.py  main_tui.py  mcp_auto_setup.py  mcp_config.py  mcp_installer.py  mcp_manager.py  mcp_registry.py  memory.py  model_selector.py  (+25 more)
tui/commands/: __init__.py  chat.py  create.py  doc.py  fix.py  gen.py
tui/core/: __init__.py  agents.py  config.py  provider.py  session.py
tui/ui/: __init__.py  enhanced_context_panel.py  unified_work_panel.py
