[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blonde-cli"
version = "1.0.0"
description = "Privacy-first multi-agent AI development assistant"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Cerekin Team", email = "contact@blonde.dev"}
]
maintainers = [
    {name = "Cerekin Team", email = "contact@blonde.dev"}
]
keywords = [
    "ai",
    "assistant",
    "cli",
    "development",
    "multi-agent",
    "privacy",
    "code-generation",
    "coding-assistant"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "tenacity>=8.2.0",
    "llama-cpp-python>=0.2.0",
    "huggingface-hub>=0.19.0",
    "pylint>=3.0.0",
    "flake8>=6.0.0",
    "ruff>=0.1.0",
    "coverage>=7.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "python-magic>=0.4.27",
    "GitPython>=3.1.40",
    "chromadb>=0.4.0",
    "keyring>=24.0.0",
    "mcp"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0"
]

[project.urls]
Homepage = "https://blonde.dev"
Documentation = "https://docs.blonde.dev"
Repository = "https://github.com/blonde-team/blonde-cli"
"Bug Tracker" = "https://github.com/blonde-team/blonde-cli/issues"
Changelog = "https://github.com/blonde-team/blonde-cli/blob/main/CHANGELOG.md"

[project.scripts]
blonde = "tui.cli:app"

[tool.setuptools]
packages = ["tui", "models"]

[tool.setuptools.package-data]
tui = ["*.py", "*.yaml"]
models = ["*.py"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
